src/main.scss
@import './sass/settings';
@import './sass/helpers';
@import './sass/reset';
@import './sass/typography';

// Colors
body {
  background-color: white;
  color: #909090;
}

.c-dark {
  color: #383434;
}

// Links
a {
  color: inherit;
  text-decoration: underline;

  &:hover,
  &:active,
  &:focus {
    font-weight: bold;
  }
}

// Layout
// 4x3 grid
.layout {
  padding: base(spacing);
  padding-top: base(spacing) * 2.5;

  @include media(large) {
    padding: base(spacing) * 2.5;
    display: grid;
    grid-template-columns: 25vw 1fr;
    grid-template-rows: 30% 70%;
    height: calc(100vh - #{base(spacing) * 5});
  }

  @include media(xlarge) {
    padding: 5vw;
    height: calc(100vh - 10vw);
  }
}

@include media(large) {
  .layout__header {
    grid-row: 1;
    grid-column: 1 / 3;
  }

  .layout__main {
    grid-row: 2;
    grid-column: 2;
  }

  .layout__footer {
    grid-row: 2;
    grid-column: 1;
    align-self: end;
  }
}

.header {
  margin-bottom: base(spacing) * 2;

  @include media(large) {
    display: grid;
    grid-template-columns: 25vw 18vw 1fr 1fr;
  }
}

.header__section {
  margin-bottom: base(spacing);
}

.header__section--1,
.header__section--3 {
  margin-bottom: base(spacing) * 2;
}

@include media(large) {
  .header__section--1 {
    grid-column: 1;
  }

  .header__section--2 {
    grid-column: 2;
  }

  .header__section--3 {
    grid-column: 3;
  }

  .header__section--4 {
    grid-column: 4;
    justify-self: end;
  }
}

.main {
  margin-bottom: base(spacing);

  @include media(large) {
    margin-bottom: 0;
  }
}

@include media(large) {
  .main-inner {
    display: grid;
    grid-template-columns: 18vw 1fr;
    grid-template-areas: 'column-1 column-2';
  }

  .main-inner__description {
    grid-area: column-1;
  }

  .main-inner__content {
    grid-area: column-2;
  }
}

// Menu
/*ul*/.menu {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.menu__item {
  margin-right: base(spacing);

  &:last-child {
    margin-right: 0;
  }

  > a {
    text-decoration: none;

    &.is-active {
      font-weight: bold;
    }
  }

  @include media(xlarge) {
    margin-right: base(xlarge, spacing);
  }
}

// Tabs
.tabs-target {
  display: none;

  &.is-active {
    display: block;
  }
}

// Gallery
.gallery,
.gallery__item,
.main-inner {
  @include media(large) {
    height: 100%;
  }
}

.gallery__item {
  display: none;
  margin-bottom: base(spacing);
  cursor: pointer;

  &.is-active {
    display: block;
  }

  @include media(large) {
    margin-bottom: 0;
  }
}

@keyframes loading {
  0% {
    background-color: #fff;
  }
  50% {
    background-color: #eee;
  }
  100% {
    background-color: #fff;
  }
}

.w-gallery__image {
  margin-left: - base(spacing);
  margin-right: - base(spacing);
  animation: loading 1250ms infinite;

  @include media(large) {
    overflow: hidden;
    margin-left: 0;
    margin-right: - base(spacing) * 2.5;
    margin-bottom: - base(spacing) * 2.5;
  }

  @include media(xlarge) {
    overflow: hidden;
    margin-left: 0;
    margin-right: -5vw;
    margin-bottom: -5vw;
  }
}

.gallery__image {
  display: block;
  width: 100%;
  margin-bottom: base(spacing) / 2;
  transition: opacity 250ms;
  opacity: 0;

  @include media(large) {
    width: auto;
    height: auto;
    min-width: 100%;
    min-height: 100%;
    object-fit: fill;
    margin-bottom: 0;
  }

  &.lazyloaded {
    opacity: 1;
  }
}

.gallery__heading {
  margin-bottom: 0;
}

.gallery__description {}

